--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -156,6 +156,7 @@
     <welcome-section
             data-services-path="rules"
             data-id="0"
+            data-to="0_0"
             data-css-shadow="rules_0_0"
             slot="welcome-section-0"
     >
@@ -172,6 +173,7 @@
                 data-services-path="rules"
                 data-template="table_0"
                 data-id="0"
+                data-to="0_0"
                 slot="fer-table_0"
         >
             <div class="auction-data">
@@ -199,6 +201,7 @@
     <welcome-section
             data-services-path="rules"
             data-id="1"
+            data-to="1_0"
             data-css-shadow="rules_0_0"
             slot="welcome-section-1"
     >
@@ -215,6 +218,7 @@
                 data-services-path="rules"
                 data-template="table_1"
                 data-id="1"
+                data-to="1_0"
                 slot="fer-table_1"
         >
             <div class="auction-data">
@@ -244,6 +248,7 @@
     <welcome-section
             data-services-path="rules"
             data-id="2"
+            data-to="2_0"
             data-css-shadow="rules_0_0"
             slot="welcome-section-2"
     >
@@ -346,6 +351,7 @@
                 data-services-path="rules"
                 data-template="table_2"
                 data-id="2"
+                data-to="2_0"
                 slot="fer-table_2"
         >
             <div class="auction-data">
@@ -410,6 +416,7 @@
     <welcome-section
             data-services-path="rules"
             data-id="3"
+            data-to="3_0"
             data-css-shadow="rules_0_0"
             slot="welcome-section-3"
     >
@@ -426,6 +433,7 @@
                 data-services-path="rules"
                 data-template="table_3"
                 data-id="3"
+                data-to="3_0"
                 slot="fer-table_3"
         >
             <div class="auction-data">
@@ -451,6 +459,7 @@
     <welcome-section
             data-services-path="rules"
             data-id="4"
+            data-to="4_0"
             slot="welcome-section-4"
             data-css-shadow="rules_0_0"
     >
@@ -467,6 +476,7 @@
                 data-services-path="rules"
                 data-template="table_3"
                 data-id="4"
+                data-to="4_0"
                 slot="fer-table_4"
         >
             <div class="auction-data">
