--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -553,11 +553,11 @@
         >
             <div class="container__schema">
                 <div class="input">
-                    <label for="schema">Схема</label>
+                    <label for="schema">Домен</label>
                     <input id="schema" placeholder="1"/>
                 </div>
                 <div class="input">
-                    <label for="region">Регион</label>
+                    <label for="region">Название схемы</label>
                     <input id="region" placeholder="showcase.booking mo 1.1.2"/>
                 </div>
             </div>
@@ -597,11 +597,11 @@
             <div class="auction-data">
                 <div class="auction-data__table --grid-template-rows_1.97917vw_1fr">
                     <div class="auction-data__table_header">
-                        <div class="auction-data__table_header_td">Домен</div>
-                        <div class="auction-data__table_header_td">Название</div>
-                        <div class="auction-data__table_header_td">Версия схемы</div>
+                        <div class="auction-data__table_header_td">Код</div>
+                        <div class="auction-data__table_header_td">Сообщение</div>
+                        <div class="auction-data__table_header_td">How to fix</div>
                         <div class="auction-data__table_header_td background-transparent"></div>
-                        <div class="auction-data__table_header_td background-transparent menu-button">
+                        <div  data-event="rules" class="auction-data__table_header_td background-transparent menu-button">
                             <img class="auction-data__table_header_img" src="./this/icons/table/plus.svg"/>
                         </div>
                     </div>
@@ -615,6 +615,7 @@
                 data-services-path="rules"
                 data-type="fer-form"
                 data-id="cancel"
+                data-event="rules"
                 data-to="0"
                 slot="fer-form__cancel"
         >
@@ -626,6 +627,7 @@
                 data-services-path="rules"
                 data-type="fer-form"
                 data-id="save"
+                data-event="rules"
                 data-to="0"
                 slot="fer-form__save"
         >
@@ -687,12 +689,12 @@
         >
             <div class="container__schema">
                 <div class="input">
-                    <label for="schema">Схема</label>
-                    <input id="schema" placeholder="1"/>
+                    <label for="id">Id</label>
+                    <input id="id" placeholder="1"/>
                 </div>
                 <div class="input">
-                    <label for="region">Регион</label>
-                    <input id="region" placeholder="showcase.booking mo 1.1.2"/>
+                    <label for="name">Название схемы</label>
+                    <input id="name" placeholder="Схема Мо"/>
                 </div>
             </div>
         </fer-form>
