--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -761,7 +761,7 @@
                 data-css-shadow="rules"
                 data-services-path="rules"
                 data-type="fer-form"
-                data-id="save"
+                data-id="save_rules"
                 data-to="1"
                 slot="fer-form__save"
         >
