--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -661,174 +661,160 @@
     >
         <div class='images'></div>
         <div class='body--padding_70px_100px'>
-            <div class="container--flex-direction_row--gap_20px">
-
+            <div class="container--gap_20px--justify-content_space-between">
+                <div class="wrapper__rules-manifest">
+                    <div class="conteiner__fer-manifest">
+                        <div class="navigation">
+                            <slot name="welcome-menu_0_0"></slot>
+                        </div>
+                        <div class="description__manifest">
+                            <slot name="fer-form_input"></slot>
+                        </div>
+                    </div>
+                    <div class="table__fer-rules">
+                        <p class="title__rules_manifest">Правила</p>
+                        <slot name="fer-table_2"></slot>
+                        <div class="manifest-button__add">
+                            <slot name="manifest-button__add"></slot>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__fer-rules">
+                    <div class="button_cancel">
+                        <slot name="manifest-button__cancel"></slot>
+                    </div>
+                    <div class="button_save">
+                        <slot name="manifest-button__save"></slot>
+                    </div>
+                </div>
             </div>
         </div>
+
+        <fer-hash
+                data-services-path="rules"
+                data-id="h_0"
+                data-hash="general"
+                data-type="rules_0_0"
+                data-css-shadow="rules_0_0"
+                slot="welcome-menu_0_0"
+        >
+            <p>Основное</p>
+        </fer-hash>
+        <fer-hash
+                data-services-path="rules"
+                data-id="h_1"
+                data-type="rules_0_0"
+                data-hash="verification"
+                data-css-shadow="rules_0_0"
+                slot="welcome-menu_0_0"
+        >
+            <p>Верификация</p>
+        </fer-hash>
+        <fer-hash
+                data-services-path="rules"
+                data-id="h_2"
+                data-hash="execution"
+                data-type="rules_0_0"
+                data-css-shadow="rules_0_0"
+                slot="welcome-menu_0_0"
+        >
+            <p>Применение</p>
+        </fer-hash>
+
+        <fer-form
+                data-services-path="rules"
+                data-css-shadow="rules_0_0"
+                slot="fer-form_input"
+        >
+            <div class="container__manifest">
+                <div class="info__fer-front">
+                    <div class="input">
+                        <label for="schema">Схема</label>
+                        <input id="schema" placeholder="1"/>
+                    </div>
+                    <div class="input">
+                        <label for="region">Регион</label>
+                        <input id="region" placeholder="showcase.booking mo 1.1.2"/>
+                    </div>
+                    <div class="input">
+                        <label for="version">Версия</label>
+                        <input id="version" placeholder="1.1.2"/>
+                    </div>
+                </div>
+
+                <div class="editor__manifest">
+                    <textarea
+                            placeholder="Описание"
+                            class="fer-codemirror-description"
+                    ></textarea>
+                </div>
+            </div>
+        </fer-form>
+        <fer-table
+                data-services-path="rules"
+                data-template="table_2"
+                data-id="2_0"
+                data-to="2"
+                slot="fer-table_2"
+        >
+            <div class="auction-data">
+                <div class="auction-data__table">
+                    <div class="auction-data__table_header">
+                        <div class="auction-data__table_header_td">ID</div>
+                        <div class="auction-data__table_header_td">Описание</div>
+                        <div class="auction-data__table_header_td">Версия манифеста</div>
+                        <div class="auction-data__table_header_td">Версия схемы</div>
+                        <div class="auction-data__table_header_td">Регион</div>
+                        <div class="auction-data__table_header_td">Статус</div>
+                        <div class="auction-data__table_header_td background-transparent"></div>
+                        <div class="auction-data__table_header_td background-transparent menu-button">
+                            <img class="auction-data__table_header_img" src="./this/icons/table/plus.svg"/>
+                        </div>
+                    </div>
+                    <div class="auction-data__table_body"></div>
+                    <div class="auction-data__table_footer">
+                        <input class="auction-data__table_footer_td empty background-transparent" name="id"/>
+                        <input class="auction-data__table_footer_td" name="description"/>
+                        <input class="auction-data__table_footer_td" name="version_manifest"/>
+                        <input class="auction-data__table_footer_td" name="version_schema"/>
+                        <input class="auction-data__table_footer_td" name="region"/>
+                        <input class="auction-data__table_footer_td" name="status"/>
+                    </div>
+                </div>
+            </div>
+        </fer-table>
+
+
+        <fer-button
+                data-css-shadow="rules"
+                data-services-path="rules"
+                data-type="fer-form"
+                data-id="cancel"
+                slot="manifest-button__add"
+        >
+            <p class="save">Добавить правило</p>
+        </fer-button>
+
+        <fer-button
+                data-css-shadow="rules"
+                data-services-path="rules"
+                data-type="fer-form"
+                data-id="cancel"
+                slot="manifest-button__cancel"
+        >
+            <p class="cancel">Отмена</p>
+        </fer-button>
+
+        <fer-button
+                data-css-shadow="rules"
+                data-services-path="rules"
+                data-type="fer-form"
+                data-id="save"
+                slot="manifest-button__save"
+        >
+            <p class="save">Сохранить</p>
+        </fer-button>
     </welcome-section>
-<!--    <welcome-section-->
-<!--            data-services-path="rules"-->
-<!--            data-id="2_0"-->
-<!--            data-to="2"-->
-<!--            data-css-shadow="rules_0_0"-->
-<!--            slot="welcome-section-2"-->
-<!--    >-->
-<!--        <div class='images'></div>-->
-<!--        <div class='body&#45;&#45;padding_70px_100px'>-->
-<!--            <div class="container&#45;&#45;justify-content_space-between">-->
-<!--                <div class="wrapper__rules-manifest">-->
-<!--                    <div class="conteiner__fer-manifest">-->
-<!--                        <div class="navigation">-->
-<!--                            <slot name="welcome-menu_0_0"></slot>-->
-<!--                        </div>-->
-<!--                        <div class="description__manifest">-->
-<!--                            <slot name="fer-form_input"></slot>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="table__fer-rules">-->
-<!--                        <p class="title__rules_manifest">Правила</p>-->
-<!--                        <slot name="fer-table_2"></slot>-->
-<!--                        <div class="manifest-button__add">-->
-<!--                            <slot name="manifest-button__add"></slot>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="menu__fer-rules">-->
-<!--                    <div class="button_cancel">-->
-<!--                        <slot name="manifest-button__cancel"></slot>-->
-<!--                    </div>-->
-<!--                    <div class="button_save">-->
-<!--                        <slot name="manifest-button__save"></slot>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        -->
-<!--        <fer-hash-->
-<!--                data-services-path="rules"-->
-<!--                data-id="h_0"-->
-<!--                data-hash="general"-->
-<!--                data-type="rules_0_0"-->
-<!--                data-css-shadow="rules_0_0"-->
-<!--                slot="welcome-menu_0_0"-->
-<!--        >-->
-<!--            <p>Основное</p>-->
-<!--        </fer-hash>-->
-<!--        <fer-hash-->
-<!--                data-services-path="rules"-->
-<!--                data-id="h_1"-->
-<!--                data-type="rules_0_0"-->
-<!--                data-hash="verification"-->
-<!--                data-css-shadow="rules_0_0"-->
-<!--                slot="welcome-menu_0_0"-->
-<!--        >-->
-<!--            <p>Верификация</p>-->
-<!--        </fer-hash>-->
-<!--        <fer-hash-->
-<!--                data-services-path="rules"-->
-<!--                data-id="h_2"-->
-<!--                data-hash="execution"-->
-<!--                data-type="rules_0_0"-->
-<!--                data-css-shadow="rules_0_0"-->
-<!--                slot="welcome-menu_0_0"-->
-<!--        >-->
-<!--            <p>Применение</p>-->
-<!--        </fer-hash>-->
-<!---->
-<!--        <fer-form-->
-<!--                data-services-path="rules"-->
-<!--                data-css-shadow="rules_0_0"-->
-<!--                slot="fer-form_input"-->
-<!--        >-->
-<!--            <div class="container__manifest">-->
-<!--                <div class="info__fer-front">-->
-<!--                    <div class="input">-->
-<!--                        <label for="schema">Схема</label>-->
-<!--                        <input id="schema" placeholder="1"/>-->
-<!--                    </div>-->
-<!--                    <div class="input">-->
-<!--                        <label for="region">Регион</label>-->
-<!--                        <input id="region" placeholder="showcase.booking mo 1.1.2"/>-->
-<!--                    </div>-->
-<!--                    <div class="input">-->
-<!--                        <label for="version">Версия</label>-->
-<!--                        <input id="version" placeholder="1.1.2"/>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!---->
-<!--                <div class="editor__manifest">-->
-<!--                    <textarea-->
-<!--                            placeholder="Описание"-->
-<!--                            class="fer-codemirror-description"-->
-<!--                    ></textarea>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </fer-form>-->
-<!--        <fer-table-->
-<!--                data-services-path="rules"-->
-<!--                data-template="table_2"-->
-<!--                data-id="2_0"-->
-<!--                data-to="2"-->
-<!--                slot="fer-table_2"-->
-<!--        >-->
-<!--            <div class="auction-data">-->
-<!--                <div class="auction-data__table">-->
-<!--                    <div class="auction-data__table_header">-->
-<!--                        <div class="auction-data__table_header_td">ID</div>-->
-<!--                        <div class="auction-data__table_header_td">Описание</div>-->
-<!--                        <div class="auction-data__table_header_td">Версия манифеста</div>-->
-<!--                        <div class="auction-data__table_header_td">Версия схемы</div>-->
-<!--                        <div class="auction-data__table_header_td">Регион</div>-->
-<!--                        <div class="auction-data__table_header_td">Статус</div>-->
-<!--                        <div class="auction-data__table_header_td background-transparent"></div>-->
-<!--                        <div class="auction-data__table_header_td background-transparent menu-button">-->
-<!--                            <img class="auction-data__table_header_img" src="./this/icons/table/plus.svg"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="auction-data__table_body"></div>-->
-<!--                    <div class="auction-data__table_footer">-->
-<!--                        <input class="auction-data__table_footer_td empty background-transparent" name="id"/>-->
-<!--                        <input class="auction-data__table_footer_td" name="description"/>-->
-<!--                        <input class="auction-data__table_footer_td" name="version_manifest"/>-->
-<!--                        <input class="auction-data__table_footer_td" name="version_schema"/>-->
-<!--                        <input class="auction-data__table_footer_td" name="region"/>-->
-<!--                        <input class="auction-data__table_footer_td" name="status"/>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </fer-table>-->
-<!---->
-<!---->
-<!--        <fer-button-->
-<!--                data-css-shadow="rules"-->
-<!--                data-services-path="rules"-->
-<!--                data-type="fer-form"-->
-<!--                data-id="cancel"-->
-<!--                slot="manifest-button__add"-->
-<!--        >-->
-<!--            <p class="save">Добавить правило</p>-->
-<!--        </fer-button>-->
-<!---->
-<!--        <fer-button-->
-<!--                data-css-shadow="rules"-->
-<!--                data-services-path="rules"-->
-<!--                data-type="fer-form"-->
-<!--                data-id="cancel"-->
-<!--                slot="manifest-button__cancel"-->
-<!--        >-->
-<!--            <p class="cancel">Отмена</p>-->
-<!--        </fer-button>-->
-<!---->
-<!--        <fer-button-->
-<!--                data-css-shadow="rules"-->
-<!--                data-services-path="rules"-->
-<!--                data-type="fer-form"-->
-<!--                data-id="save"-->
-<!--                slot="manifest-button__save"-->
-<!--        >-->
-<!--            <p class="save">Сохранить</p>-->
-<!--        </fer-button>-->
-<!--    </welcome-section>-->
 
     <div slot="welcome-animation" class="animation">
         <div class="item"></div>
