--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -673,7 +673,7 @@
                     </div>
                     <div class="table__fer-rules">
                         <p class="title__rules_manifest">Правила</p>
-                        <slot name="fer-table_2"></slot>
+                        <slot name="fer-table_2_0"></slot>
                         <div class="manifest-button__add">
                             <slot name="manifest-button__add"></slot>
                         </div>
@@ -752,33 +752,26 @@
         </fer-form>
         <fer-table
                 data-services-path="rules"
-                data-template="table_2"
+                data-template="table_4"
                 data-id="2_0"
                 data-to="2"
-                slot="fer-table_2"
+                slot="fer-table_2_0"
         >
             <div class="auction-data">
                 <div class="auction-data__table">
                     <div class="auction-data__table_header">
-                        <div class="auction-data__table_header_td">ID</div>
+                        <div class="auction-data__table_header_td">id</div>
                         <div class="auction-data__table_header_td">Описание</div>
-                        <div class="auction-data__table_header_td">Версия манифеста</div>
                         <div class="auction-data__table_header_td">Версия схемы</div>
-                        <div class="auction-data__table_header_td">Регион</div>
-                        <div class="auction-data__table_header_td">Статус</div>
+                        <div class="auction-data__table_header_td">Версия манифеста</div>
                         <div class="auction-data__table_header_td background-transparent"></div>
-                        <div class="auction-data__table_header_td background-transparent menu-button">
-                            <img class="auction-data__table_header_img" src="./this/icons/table/plus.svg"/>
-                        </div>
                     </div>
                     <div class="auction-data__table_body"></div>
                     <div class="auction-data__table_footer">
                         <input class="auction-data__table_footer_td empty background-transparent" name="id"/>
                         <input class="auction-data__table_footer_td" name="description"/>
-                        <input class="auction-data__table_footer_td" name="version_manifest"/>
-                        <input class="auction-data__table_footer_td" name="version_schema"/>
-                        <input class="auction-data__table_footer_td" name="region"/>
-                        <input class="auction-data__table_footer_td" name="status"/>
+                        <input class="auction-data__table_footer_td" name="schema_version"/>
+                        <input class="auction-data__table_footer_td" name="rules_version"/>
                     </div>
                 </div>
             </div>
