--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -697,6 +697,7 @@
                 data-type="rules_0_0"
                 data-css-shadow="rules_0_0"
                 slot="welcome-menu_0_0"
+                class="active"
         >
             <p>Основное</p>
         </fer-hash>
@@ -764,7 +765,6 @@
                         <div class="auction-data__table_header_td">Описание</div>
                         <div class="auction-data__table_header_td">Версия схемы</div>
                         <div class="auction-data__table_header_td">Версия манифеста</div>
-                        <div class="auction-data__table_header_td background-transparent"></div>
                     </div>
                     <div class="auction-data__table_body"></div>
                     <div class="auction-data__table_footer">
