--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -661,12 +661,12 @@
     >
         <div class='images'></div>
         <div class='body--padding_70px_100px'>
-            <div class="container--gap_20px--justify-content_space-between">
+            <div class="navigation">
+                <slot name="welcome-menu_0_0"></slot>
+            </div>
+            <div data-hash-content="#general" class="container--gap_20px--justify-content_space-between" style="display: none">
                 <div class="wrapper__rules-manifest">
                     <div class="conteiner__fer-manifest">
-                        <div class="navigation">
-                            <slot name="welcome-menu_0_0"></slot>
-                        </div>
                         <div class="description__manifest">
                             <slot name="fer-form_input"></slot>
                         </div>
