--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -695,6 +695,47 @@
                     </div>
                 </div>
             </div>
+
+            <div data-hash-content="#verification" class="container--gap_20px--justify-content_space-between"
+                 style="display: none">
+                <div class="wrapper__rules-manifest">
+                    <div class="table__fer-rules">
+                        <slot name="fer-table_2_1"></slot>
+                        <div class="manifest-button__add">
+                            <slot name="manifest-button__add"></slot>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__fer-rules">
+                    <div class="button_cancel">
+                        <slot name="manifest-button__cancel"></slot>
+                    </div>
+                    <div class="button_save">
+                        <slot name="manifest-button__save"></slot>
+                    </div>
+                </div>
+            </div>
+
+            <div data-hash-content="#execution" class="container--gap_20px--justify-content_space-between"
+                 style="display: none">
+                <div class="wrapper__rules-manifest">
+                    <div class="table__fer-rules">
+                        <slot name="fer-table_2_2"></slot>
+                        <div class="manifest-button__add">
+                            <slot name="manifest-button__add"></slot>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__fer-rules">
+                    <div class="button_cancel">
+                        <slot name="manifest-button__cancel"></slot>
+                    </div>
+                    <div class="button_save">
+                        <slot name="manifest-button__save"></slot>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <fer-hash
@@ -807,6 +848,59 @@
         >
             <p class="save">Сохранить</p>
         </fer-button>
+
+        <fer-table
+                data-services-path="rules"
+                data-template="table_5"
+                data-id="2_1"
+                data-to="2_0"
+                slot="fer-table_2_1"
+        >
+            <div class="auction-data">
+                <div class="auction-data__table">
+                    <div class="auction-data__table_header">
+                        <div class="auction-data__table_header_td">Дата</div>
+                        <div class="auction-data__table_header_td">Версия валидатора</div>
+                        <div class="auction-data__table_header_td">Результаты модификаций</div>
+                        <div class="auction-data__table_header_td">Ошибки</div>
+                        <div class="auction-data__table_header_td background-transparent"></div>
+                        <div class="auction-data__table_header_td background-transparent menu-button">
+                            <img class="auction-data__table_header_img" src="./this/icons/table/plus.svg"/>
+                        </div>
+                    </div>
+                    <div class="auction-data__table_body"></div>
+                    <div class="auction-data__table_footer">
+                        <input class="auction-data__table_footer_td empty background-transparent" name="id"/>
+                        <input class="auction-data__table_footer_td" name="description"/>
+                        <input class="auction-data__table_footer_td" name="schema_version"/>
+                        <input class="auction-data__table_footer_td" name="rules_version"/>
+                    </div>
+                </div>
+            </div>
+        </fer-table>
+
+        <fer-table
+                data-services-path="rules"
+                data-template="table_6"
+                data-id="2_2"
+                data-to="2"
+                slot="fer-table_2_2"
+        >
+            <div class="auction-data">
+                <div class="auction-data__table">
+                    <div class="auction-data__table_header">
+                        <div class="auction-data__table_header_td">IP</div>
+                        <div class="auction-data__table_header_td">Статус</div>
+                        <div class="auction-data__table_header_td background-transparent"></div>
+                    </div>
+                    <div class="auction-data__table_body"></div>
+                    <div class="auction-data__table_footer">
+                        <input class="auction-data__table_footer_td" name="name"/>
+                        <input class="auction-data__table_footer_td" name="description"/>
+                    </div>
+                </div>
+            </div>
+        </fer-table>
     </welcome-section>
 
     <div slot="welcome-animation" class="animation">
