--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -706,7 +706,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu__fer-rules">
+                <div class="menu__fer-rules--margin-right_6.20833vw">
                     <div class="button_save">
                         <slot name="verification__button"></slot>
                     </div>
