--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -164,6 +164,7 @@
         <div class='body--padding_70px_100px'>
             <div class="container">
                 <div>
+                    <slot name="select"></slot>
                     <slot name="fer-table_0"></slot>
                 </div>
             </div>
