--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -820,7 +820,7 @@
                 data-css-shadow="rules"
                 data-services-path="rules"
                 data-type="verification"
-                data-id="save"
+                data-id="verification_manifest"
                 slot="verification__button"
         >
             <p class="save">Верификация</p>
@@ -830,8 +830,8 @@
         <fer-button
                 data-css-shadow="rules"
                 data-services-path="rules"
-                data-type="fer-form"
-                data-id="cancel"
+                data-type="add"
+                data-id="add_rules"
                 slot="manifest-button__add"
         >
             <p class="save">Добавить правило</p>
@@ -840,8 +840,9 @@
         <fer-button
                 data-css-shadow="rules"
                 data-services-path="rules"
-                data-type="fer-form"
-                data-id="cancel"
+                data-type="cancel"
+                data-to="2"
+                data-id="cancel_rules"
                 slot="manifest-button__cancel"
         >
             <p class="cancel">Отмена</p>
@@ -850,8 +851,8 @@
         <fer-button
                 data-css-shadow="rules"
                 data-services-path="rules"
-                data-type="fer-form"
-                data-id="save"
+                data-type="add"
+                data-id="add_rules"
                 slot="manifest-button__save"
         >
             <p class="save">Сохранить</p>
