--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -826,7 +826,6 @@
             <p class="save">Верификация</p>
         </fer-button>
 
-
         <fer-button
                 data-css-shadow="rules"
                 data-services-path="rules"
@@ -896,7 +895,7 @@
                 slot="fer-table_2_2"
         >
             <div class="auction-data">
-                <div class="auction-data__table">
+                <div class="auction-data__table --width_92.3%">
                     <div class="auction-data__table_header">
                         <div class="auction-data__table_header_td">IP</div>
                         <div class="auction-data__table_header_td">Статус</div>
