--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -246,21 +246,17 @@
                         <img class="image-general-src" src='./this/img/general/index.png'/>
                     </div>
                     <div class="content">
-                        <p class="description-title">Привет!</p>
                         <p class="description-title">Мы рады приветствовать тебя в команде</p>
-                        <h1 class="margin--bottom--font-size_5.1rem">Цифромед</h1>
+                        <h1 class="margin--bottom--font-size_5.1rem--margin-bottom_3rem">Цифромед</h1>
                         <div class="description-content">
-                            <p class="description-text bold margin--bottom">
-                                Приветствуем тебя в команде Цифромед!
+                            <p class="description-text">
+                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно<br>
+                                ориентироваться в новой обстановке, мы подготовили этот Welcome Book.
                             </p>
                             <p class="description-text">
-                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно ориентироваться в
-                                новой обстановке, мы подготовили этот Welcome Book.
-                            </p>
-                            <p class="description-text">
-                                В нем содержится ключевая информация, необходимая в первые месяцы работы: о Цифромеде,
-                                нашей структуре, особенностях организации работы, корпоративных возможностях и полезных
-                                контактах.
+                                В нем содержится ключевая информация, необходимая в первые месяцы <br>
+                                работы: о Цифромеде, нашей структуре, особенностях организации работы,<br>
+                                корпоративных возможностях и полезных контактах.
                             </p>
                             <p class="description-text margin--bottom">
                                 Уверены, что после прочтения, ты получишь ответы на многие вопросы!
@@ -281,22 +277,20 @@
                                 <p class="description-title title-item_0"> Уважаемый коллега!</p>
                                 <div class="description-content textAlign-left">
                                     <p class="description-text text-style">
-                                        Мы рады видеть тебя в нашей команде. Наша компания реализует масштабные
-                                        федеральные
-                                        и региональные проекты. Их успех во многом связан с людьми, которые работают в
-                                        Цифромеде.
+                                        Мы рады видеть тебя в нашей команде. Наша компания<br>
+                                        реализует масштабные федеральные и региональные<br>
+                                        проекты. Их успех во многом связан с людьми, которые<br>
+                                        работают в Цифромеде.
                                     </p>
                                     <p class="description-text description-text-width description-text-margin-unset">
-                                        Наши совместные действия, сплоченность и преданность общему делу позволяют
-                                        компании
-                                        развиваться, достигать амбициозных целей. Мы ценим талант каждого сотрудника, и
-                                        разделяем общие ценности нашей команды.
-
+                                        Наши совместные действия, сплоченность и преданность <br>
+                                        общему делу позволяют компании развиваться, достигать <br>
+                                        амбициозных целей. Мы ценим талант каждого сотрудника,<br>
+                                        и разделяем общие ценности нашей команды. Надеемся, что
                                     </p>
                                     <p class="description-text description-text-width-2 description-text-margin-unset">
-                                        Надеемся, что наша компания станет важной
-                                        составляющей твоего личностного и профессионального роста.
-
+                                        наша компания станет важной составляющей твоего <br>
+                                        личностного и профессионального роста.
                                     </p>
                                     <p class="description-content-end end-font-style textAlign-left">
                                         Добро пожаловать в команду!
