--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -481,7 +481,8 @@
                     <p class='paragraph has-animation'>
                         Наша компания разделена
                         <span class="bold">на Бизнес-единицы</span>
-                        - функциональные подразделения, отвечающие за реализацию проектов в своих зонах ответственности.
+                        - функциональные подразделения, отвечающие за реализацию проектов <br>
+                        в своих зонах ответственности.
                     </p>
                     <div class="content__welcome-section_1_0">
                         <div class="item__welcome-section_1_0">
@@ -528,7 +529,7 @@
                     </div>
                     <p class='paragraph-24 has-animation--margin-top_34'>
                         Подробно со структурой компании и топ-менеджерами ты можешь познакомиться на
-                        <span class="link">корпоративном портале</span>
+                        <span class="link--text-decoration_underline">корпоративном портале</span>
                         .
                     </p>
 
