--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -837,22 +837,27 @@
                 <div class='section_content_body--center'>
                     <div class="background"></div>
                     <div class='class="content__welcome-section_1_2'>
-                        <div class='section_content_card'>
+                        <div class='section_content_card --padding_40px layer-scale'>
                             <div class='section_content_card_top'>
                                 <div class='logo__section_content_1_2'>
                                     <div class='section_content_img'>
-                                        <img src="./this/img/sections/1/icons/00.png"/>
+<!--                                        <img src="./this/img/sections/1/icons/00.png"/>-->
                                     </div>
                                     <div class='section_content_text'>
                                         ФМБА <br>России
                                     </div>
                                 </div>
                             </div>
-                            <div style="display: none" class='section_content_card_bottom'>
-                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
-                            </div>
+<!--                            <div style="display: flex" class='section_content_card_bottom'>-->
+<!--                                В части автоматизации крупнейшей сети государственных клиник ФМБА России Цифромед отвечает за разработку, развитие и поддержку централизованной облачной платформы ЕВМИАС.-->
+<!--                                Платформа позволяет цифровизовать следующие процессы:-->
+<!--                                Управление оказанием медицинской помощи-->
+<!--                                Ведение базы данных и электронных карт-->
+<!--                                Запись к врачу, по направлению, на вакцинацию и иные сервисы на ЕПГУ-->
+<!--                                Взаимодействие с федеральными информационными системами-->
+<!--                            </div>-->
                         </div>
-                        <div class='section_content_card'>
+                        <div class='section_content_card --padding_40px'>
                             <div class='section_content_card_top'>
                                 <div class='logo__section_content_1_2'>
                                     <div class='section_content_card_top section_2_height'>
@@ -868,7 +873,7 @@
                                 Автоматизацией крупнейшей сети государственных клиник ФМБА России
                             </div>
                         </div>
-                        <div class='section_content_card'>
+                        <div class='section_content_card --padding_40px'>
                             <div class='section_content_card_top'>
                                 <div class='logo__section_content_1_2'>
                                     <div class='section_content_card_top section_2_height'>
@@ -884,7 +889,7 @@
                             </div>
                         </div>
 
-                        <div class='section_content_card'>
+                        <div class='section_content_card --padding_40px'>
                             <div class='section_content_card_top'>
                                 <img class="--border-radius_10px" src="./this/img/sections/1/icons/02.svg"/>
                             </div>
@@ -893,7 +898,7 @@
                             </div>
                         </div>
 
-                        <div class='section_content_card'>
+                        <div class='section_content_card --padding_40px'>
                             <div class='section_content_card_top_3'>
                                 <p class='section_content_card_top_logo_3'>ЕЦК</p>
                             </div>
@@ -906,6 +911,9 @@
             </div>
             <div class='section_content_item_img_1_0'></div>
         </div>
+<!--        <welcome-description class="">-->
+<!---->
+<!--        </welcome-description>-->
     </welcome-section>
 
 
